
[package]
name = "rcrypt"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
eframe = "0.20.1"
egui = "0.20.1"
librcrypt = { path = "librcrypt/" }
rand = "0.8.5"
getrandom = { version = "*", features = ["js"] }
# tracing-subscriber = "0.3.16"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
clap = { version = "4.0.29", features = ["derive"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

# Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2

[workspace]
members = [
  "librcrypt",
#  "rcrypt",
]

[profile.wasm]
inherits="release"
opt-level="s" # smaller WASM
[profile.release]
lto = true # fat LTO 
strip = true 
# panic = "abort"
