[package]
name = "rcrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
clap = { version = "4.0.29", features = ["derive"] }
eframe = "0.20.1"
librcrypt = { path = "../librcrypt/" }
rand = "0.8.5"
tracing-subscriber = "0.3.16"
